# TEngine

./: .gitignore  CMakeLists.txt  README.md
src/: camera.c  camera.h  demo.c  display.c  display.h  filehelper.c  filehelper.h  framebuffer.c  framebuffer.h  frustum.c  frustum.h  inst_model.c  inst_model.h  light.c  light.h  linmath.h  main.c  master.h  mesh.c  mesh.h  model.c  model.h  program.c  program.h  render.c  render.h  tengine_master.c  tengine_master.h  tengine_math.c  tengine_math.h  text.c  text.h  texture.c  texture.h  utils.c  utils.h  vector.c  vector.h
